# MyFinance

./: Poetry&Alembic.md  README.md  alembic.ini  doc.md  pyproject.toml
migrations/: env.py
migrations/versions/: 1ac96deff9d5_initial_migration.py  4d2159215906_recriando_migrations.py  c4922049ad0d_testando_env.py  c8a24e5b72dc_modelo_de_dados_de_usuário_mais_robusto.py
src/: macro.py  main.py
src/app/api/: __init__.py  responses.py
src/app/application/: usecases.py  user_service.py
src/app/domain/: BaseModel.py  Role.py  Teste.py  budget.py  models.py  user.py
src/app/infrastructure/: database.py  db.sqlite  orm.py
src/app/interfaces/: api.py
src/app/mappers/: user_mapper.py
src/app/repositories/: user_repository.py
src/tests/: test_sample.py
src/utils/: GetBrasiliaTime.py  config.py  infra.txt
