[project]
name = "myfinanceeasy"
version = "0.1.0"
description = "We are going to start a personal project to build a new software with the intetion to manage our money."
authors = [
    {name = "pachecosamuel",email = "pacheco.samuel@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "src" }
]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
